netbee/src/nbpflcompiler/parser.output
Terminals unused in grammar

   PFL_IPV6ADDR
   PFL_MUOLMUL


State 90 conflicts: 1 shift/reduce


Grammar

    0 $accept: Statement $end

    1 Statement: BoolExpression FullEncap
    2          | FullEncap Action
    3          | BoolExpression FullEncap Action

    4 FullEncap: %empty
    5          | PFL_FULLENCAP

    6 Action: ReturnPkt
    7       | ExtractFields

    8 ExtractFields: PFL_EXTRACT_FIELDS '(' FieldsList ')'

    9 FieldsList: FieldsListItem
   10           | FieldsList ',' FieldsListItem

   11 FieldsListItem: PFL_PROTOFIELD
   12               | PFL_MULTIPROTOFIELD
   13               | PFL_PROTOMULTIFIELD
   14               | PFL_PROTOFIELD_INDEX
   15               | PFL_PROTOMULTIFIELD_INDEX

   16 ReturnPkt: PFL_RETURN_PACKET PFL_ON PFL_PORT GenericNumber

   17 UnaryExpression: '(' BoolExpression ')'
   18                | BoolOperand Tunnel FlagNosession FlagNoack
   19                | PFL_NOT UnaryExpression
   20                | BoolOperand Tunnel FlagNosession FlagNoack PFL_IN InExpression
   21                | BoolOperand Tunnel FlagNosession FlagNoack PFL_NOTIN NotInExpression

   22 Tunnel: %empty
   23       | PFL_TUNNELED

   24 InExpression: ProtoOrAny
   25             | InExpression PFL_IN ProtoOrAny
   26             | InExpression PFL_NOTIN NotInExpression

   27 NotInExpression: Proto
   28                | NotInExpression PFL_NOTIN Proto
   29                | NotInExpression PFL_IN InExpression

   30 ProtoOrAny: Proto
   31           | PFL_ANY
   32           | PFL_ANY Repeater

   33 Proto: ProtocolOrSet Repeater Tunnel FlagNosession FlagNoack
   34      | ProtocolOrSet Tunnel FlagNosession FlagNoack

   35 ProtocolOrSet: BoolOperand
   36              | SetOfProtocol

   37 SetOfProtocol: '{' ElementOfSet '}'

   38 ElementOfSet: SetOrExpression
   39             | ElementOfSet ',' SetOrExpression

   40 Repeater: PFL_ADD
   41         | PFL_MUL
   42         | PFL_QUESTION

   43 SetOrExpression: SetAndExpression
   44                | SetOrExpression PFL_OR SetAndExpression

   45 SetAndExpression: SetUnaryExpression
   46                 | SetAndExpression PFL_AND SetAndExpression

   47 SetUnaryExpression: '(' SetOrExpression ')'
   48                   | PFL_NOT SetUnaryExpression
   49                   | BoolOperand

   50 BoolExpression: OrExpression

   51 OrExpression: AndExpression
   52             | OrExpression PFL_OR AndExpression

   53 AndExpression: UnaryExpression
   54              | AndExpression PFL_AND AndExpression

   55 BoolOperand: Protocol
   56            | RelExpression

   57 FlagNosession: %empty
   58              | PFL_NOSESSION

   59 FlagNoack: %empty
   60          | PFL_NOACK

   61 sensitive: %empty
   62          | PFL_SENSITIVE

   63 RelExpression: ProtoFieldOrProtofieldIndex PFL_MATCHES PFL_STRING sensitive
   64              | ProtoFieldOrProtofieldIndex PFL_CONTAINS PFL_STRING sensitive
   65              | BitwiseExpression PFL_EQ BitwiseExpression
   66              | BitwiseExpression PFL_NE BitwiseExpression
   67              | BitwiseExpression PFL_GT BitwiseExpression
   68              | BitwiseExpression PFL_GE BitwiseExpression
   69              | BitwiseExpression PFL_LT BitwiseExpression
   70              | BitwiseExpression PFL_LE BitwiseExpression

   71 ProtoFieldOrProtofieldIndex: PFL_PROTOFIELD
   72                            | PFL_PROTOFIELD_INDEX

   73 Protocol: PFL_PROTOCOL
   74         | PFL_PROTOCOL_INDEX

   75 BitwiseExpression: ShiftExpression
   76                  | BitwiseExpression PFL_BWAND ShiftExpression
   77                  | BitwiseExpression PFL_BWOR ShiftExpression
   78                  | BitwiseExpression PFL_BWXOR ShiftExpression
   79                  | PFL_BWNOT ShiftExpression
   80                  | '(' BitwiseExpression ')'

   81 ShiftExpression: AddExpression
   82                | ShiftExpression PFL_SHL AddExpression
   83                | ShiftExpression PFL_SHR AddExpression

   84 AddExpression: MulExpression
   85              | AddExpression PFL_ADDADD MulExpression
   86              | AddExpression PFL_SUB MulExpression

   87 MulExpression: Term
   88              | MulExpression PFL_MULMUL MulExpression

   89 Term: GenericNumber
   90     | PFL_IPV4ADDR
   91     | PFL_MACADDR
   92     | PFL_PROTOFIELD
   93     | PFL_PROTOFIELD_INDEX
   94     | PFL_PROTOCOL '[' GenericNumber ']'
   95     | PFL_PROTOCOL '[' GenericNumber ':' GenericNumber ']'

   96 GenericNumber: PFL_NUMBER
   97              | PFL_HEXNUMBER


Terminals, with rules where they appear

$end (0) 0
'(' (40) 8 17 47 80
')' (41) 8 17 47 80
',' (44) 10 39
':' (58) 95
'[' (91) 94 95
']' (93) 94 95
'{' (123) 37
'}' (125) 37
error (256)
PFL_RETURN_PACKET (258) 16
PFL_EXTRACT_FIELDS (259) 8
PFL_ON (260) 16
PFL_PORT (261) 16
PFL_NUMBER (262) 96
PFL_HEXNUMBER (263) 97
PFL_PROTOCOL (264) 73 94 95
PFL_PROTOFIELD (265) 11 71 92
PFL_PROTOCOL_INDEX (266) 74
PFL_PROTOFIELD_INDEX (267) 14 72 93
PFL_PROTOMULTIFIELD_INDEX (268) 15
PFL_MULTIPROTOFIELD (269) 12
PFL_PROTOMULTIFIELD (270) 13
PFL_IPV4ADDR (271) 90
PFL_IPV6ADDR (272)
PFL_MACADDR (273) 91
PFL_ADD (274) 40
PFL_ADDADD (275) 85
PFL_SUB (276) 86
PFL_MULMUL (277) 88
PFL_BWAND (278) 76
PFL_BWOR (279) 77
PFL_BWXOR (280) 78
PFL_BWNOT (281) 79
PFL_SHL (282) 82
PFL_SHR (283) 83
PFL_AND (284) 46 54
PFL_OR (285) 44 52
PFL_NOT (286) 19 48
PFL_EQ (287) 65
PFL_NE (288) 66
PFL_LT (289) 69
PFL_LE (290) 70
PFL_GT (291) 67
PFL_GE (292) 68
PFL_MATCHES (293) 63
PFL_CONTAINS (294) 64
PFL_SENSITIVE (295) 62
PFL_STRING (296) 63 64
PFL_IN (297) 20 25 29
PFL_NOTIN (298) 21 26 28
PFL_QUESTION (299) 42
PFL_ANY (300) 31 32
PFL_TUNNELED (301) 23
PFL_FULLENCAP (302) 5
PFL_NOSESSION (303) 58
PFL_NOACK (304) 60
PFL_MUL (305) 41
PFL_MUOLMUL (306)


Nonterminals, with rules where they appear

$accept (60)
    on left: 0
Statement (61)
    on left: 1 2 3, on right: 0
FullEncap (62)
    on left: 4 5, on right: 1 2 3
Action (63)
    on left: 6 7, on right: 2 3
ExtractFields (64)
    on left: 8, on right: 7
FieldsList (65)
    on left: 9 10, on right: 8 10
FieldsListItem (66)
    on left: 11 12 13 14 15, on right: 9 10
ReturnPkt (67)
    on left: 16, on right: 6
UnaryExpression (68)
    on left: 17 18 19 20 21, on right: 19 53
Tunnel (69)
    on left: 22 23, on right: 18 20 21 33 34
InExpression (70)
    on left: 24 25 26, on right: 20 25 26 29
NotInExpression (71)
    on left: 27 28 29, on right: 21 26 28 29
ProtoOrAny (72)
    on left: 30 31 32, on right: 24 25
Proto (73)
    on left: 33 34, on right: 27 28 30
ProtocolOrSet (74)
    on left: 35 36, on right: 33 34
SetOfProtocol (75)
    on left: 37, on right: 36
ElementOfSet (76)
    on left: 38 39, on right: 37 39
Repeater (77)
    on left: 40 41 42, on right: 32 33
SetOrExpression (78)
    on left: 43 44, on right: 38 39 44 47
SetAndExpression (79)
    on left: 45 46, on right: 43 44 46
SetUnaryExpression (80)
    on left: 47 48 49, on right: 45 48
BoolExpression (81)
    on left: 50, on right: 1 3 17
OrExpression (82)
    on left: 51 52, on right: 50 52
AndExpression (83)
    on left: 53 54, on right: 51 52 54
BoolOperand (84)
    on left: 55 56, on right: 18 20 21 35 49
FlagNosession (85)
    on left: 57 58, on right: 18 20 21 33 34
FlagNoack (86)
    on left: 59 60, on right: 18 20 21 33 34
sensitive (87)
    on left: 61 62, on right: 63 64
RelExpression (88)
    on left: 63 64 65 66 67 68 69 70, on right: 56
ProtoFieldOrProtofieldIndex (89)
    on left: 71 72, on right: 63 64
Protocol (90)
    on left: 73 74, on right: 55
BitwiseExpression (91)
    on left: 75 76 77 78 79 80, on right: 65 66 67 68 69 70 76 77 78
    80
ShiftExpression (92)
    on left: 81 82 83, on right: 75 76 77 78 79 82 83
AddExpression (93)
    on left: 84 85 86, on right: 81 82 83 85 86
MulExpression (94)
    on left: 87 88, on right: 84 85 86 88
Term (95)
    on left: 89 90 91 92 93 94 95, on right: 87
GenericNumber (96)
    on left: 96 97, on right: 16 89 94 95


State 0

    0 $accept: . Statement $end

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 3
    PFL_PROTOFIELD        shift, and go to state 4
    PFL_PROTOCOL_INDEX    shift, and go to state 5
    PFL_PROTOFIELD_INDEX  shift, and go to state 6
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8
    PFL_BWNOT             shift, and go to state 9
    PFL_NOT               shift, and go to state 10
    PFL_FULLENCAP         shift, and go to state 11
    '('                   shift, and go to state 12

    $default  reduce using rule 4 (FullEncap)

    Statement                    go to state 13
    FullEncap                    go to state 14
    UnaryExpression              go to state 15
    BoolExpression               go to state 16
    OrExpression                 go to state 17
    AndExpression                go to state 18
    BoolOperand                  go to state 19
    RelExpression                go to state 20
    ProtoFieldOrProtofieldIndex  go to state 21
    Protocol                     go to state 22
    BitwiseExpression            go to state 23
    ShiftExpression              go to state 24
    AddExpression                go to state 25
    MulExpression                go to state 26
    Term                         go to state 27
    GenericNumber                go to state 28


State 1

   96 GenericNumber: PFL_NUMBER .

    $default  reduce using rule 96 (GenericNumber)


State 2

   97 GenericNumber: PFL_HEXNUMBER .

    $default  reduce using rule 97 (GenericNumber)


State 3

   73 Protocol: PFL_PROTOCOL .
   94 Term: PFL_PROTOCOL . '[' GenericNumber ']'
   95     | PFL_PROTOCOL . '[' GenericNumber ':' GenericNumber ']'

    '['  shift, and go to state 29

    $default  reduce using rule 73 (Protocol)


State 4

   71 ProtoFieldOrProtofieldIndex: PFL_PROTOFIELD .
   92 Term: PFL_PROTOFIELD .

    PFL_MATCHES   reduce using rule 71 (ProtoFieldOrProtofieldIndex)
    PFL_CONTAINS  reduce using rule 71 (ProtoFieldOrProtofieldIndex)
    $default      reduce using rule 92 (Term)


State 5

   74 Protocol: PFL_PROTOCOL_INDEX .

    $default  reduce using rule 74 (Protocol)


State 6

   72 ProtoFieldOrProtofieldIndex: PFL_PROTOFIELD_INDEX .
   93 Term: PFL_PROTOFIELD_INDEX .

    PFL_MATCHES   reduce using rule 72 (ProtoFieldOrProtofieldIndex)
    PFL_CONTAINS  reduce using rule 72 (ProtoFieldOrProtofieldIndex)
    $default      reduce using rule 93 (Term)


State 7

   90 Term: PFL_IPV4ADDR .

    $default  reduce using rule 90 (Term)


State 8

   91 Term: PFL_MACADDR .

    $default  reduce using rule 91 (Term)


State 9

   79 BitwiseExpression: PFL_BWNOT . ShiftExpression

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 30
    PFL_PROTOFIELD        shift, and go to state 31
    PFL_PROTOFIELD_INDEX  shift, and go to state 32
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8

    ShiftExpression  go to state 33
    AddExpression    go to state 25
    MulExpression    go to state 26
    Term             go to state 27
    GenericNumber    go to state 28


State 10

   19 UnaryExpression: PFL_NOT . UnaryExpression

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 3
    PFL_PROTOFIELD        shift, and go to state 4
    PFL_PROTOCOL_INDEX    shift, and go to state 5
    PFL_PROTOFIELD_INDEX  shift, and go to state 6
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8
    PFL_BWNOT             shift, and go to state 9
    PFL_NOT               shift, and go to state 10
    '('                   shift, and go to state 12

    UnaryExpression              go to state 34
    BoolOperand                  go to state 19
    RelExpression                go to state 20
    ProtoFieldOrProtofieldIndex  go to state 21
    Protocol                     go to state 22
    BitwiseExpression            go to state 23
    ShiftExpression              go to state 24
    AddExpression                go to state 25
    MulExpression                go to state 26
    Term                         go to state 27
    GenericNumber                go to state 28


State 11

    5 FullEncap: PFL_FULLENCAP .

    $default  reduce using rule 5 (FullEncap)


State 12

   17 UnaryExpression: '(' . BoolExpression ')'
   80 BitwiseExpression: '(' . BitwiseExpression ')'

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 3
    PFL_PROTOFIELD        shift, and go to state 4
    PFL_PROTOCOL_INDEX    shift, and go to state 5
    PFL_PROTOFIELD_INDEX  shift, and go to state 6
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8
    PFL_BWNOT             shift, and go to state 9
    PFL_NOT               shift, and go to state 10
    '('                   shift, and go to state 12

    UnaryExpression              go to state 15
    BoolExpression               go to state 35
    OrExpression                 go to state 17
    AndExpression                go to state 18
    BoolOperand                  go to state 19
    RelExpression                go to state 20
    ProtoFieldOrProtofieldIndex  go to state 21
    Protocol                     go to state 22
    BitwiseExpression            go to state 36
    ShiftExpression              go to state 24
    AddExpression                go to state 25
    MulExpression                go to state 26
    Term                         go to state 27
    GenericNumber                go to state 28


State 13

    0 $accept: Statement . $end

    $end  shift, and go to state 37


State 14

    2 Statement: FullEncap . Action

    PFL_RETURN_PACKET   shift, and go to state 38
    PFL_EXTRACT_FIELDS  shift, and go to state 39

    Action         go to state 40
    ExtractFields  go to state 41
    ReturnPkt      go to state 42


State 15

   53 AndExpression: UnaryExpression .

    $default  reduce using rule 53 (AndExpression)


State 16

    1 Statement: BoolExpression . FullEncap
    3          | BoolExpression . FullEncap Action

    PFL_FULLENCAP  shift, and go to state 11

    $default  reduce using rule 4 (FullEncap)

    FullEncap  go to state 43


State 17

   50 BoolExpression: OrExpression .
   52 OrExpression: OrExpression . PFL_OR AndExpression

    PFL_OR  shift, and go to state 44

    $default  reduce using rule 50 (BoolExpression)


State 18

   51 OrExpression: AndExpression .
   54 AndExpression: AndExpression . PFL_AND AndExpression

    PFL_AND  shift, and go to state 45

    $default  reduce using rule 51 (OrExpression)


State 19

   18 UnaryExpression: BoolOperand . Tunnel FlagNosession FlagNoack
   20                | BoolOperand . Tunnel FlagNosession FlagNoack PFL_IN InExpression
   21                | BoolOperand . Tunnel FlagNosession FlagNoack PFL_NOTIN NotInExpression

    PFL_TUNNELED  shift, and go to state 46

    $default  reduce using rule 22 (Tunnel)

    Tunnel  go to state 47


State 20

   56 BoolOperand: RelExpression .

    $default  reduce using rule 56 (BoolOperand)


State 21

   63 RelExpression: ProtoFieldOrProtofieldIndex . PFL_MATCHES PFL_STRING sensitive
   64              | ProtoFieldOrProtofieldIndex . PFL_CONTAINS PFL_STRING sensitive

    PFL_MATCHES   shift, and go to state 48
    PFL_CONTAINS  shift, and go to state 49


State 22

   55 BoolOperand: Protocol .

    $default  reduce using rule 55 (BoolOperand)


State 23

   65 RelExpression: BitwiseExpression . PFL_EQ BitwiseExpression
   66              | BitwiseExpression . PFL_NE BitwiseExpression
   67              | BitwiseExpression . PFL_GT BitwiseExpression
   68              | BitwiseExpression . PFL_GE BitwiseExpression
   69              | BitwiseExpression . PFL_LT BitwiseExpression
   70              | BitwiseExpression . PFL_LE BitwiseExpression
   76 BitwiseExpression: BitwiseExpression . PFL_BWAND ShiftExpression
   77                  | BitwiseExpression . PFL_BWOR ShiftExpression
   78                  | BitwiseExpression . PFL_BWXOR ShiftExpression

    PFL_BWAND  shift, and go to state 50
    PFL_BWOR   shift, and go to state 51
    PFL_BWXOR  shift, and go to state 52
    PFL_EQ     shift, and go to state 53
    PFL_NE     shift, and go to state 54
    PFL_LT     shift, and go to state 55
    PFL_LE     shift, and go to state 56
    PFL_GT     shift, and go to state 57
    PFL_GE     shift, and go to state 58


State 24

   75 BitwiseExpression: ShiftExpression .
   82 ShiftExpression: ShiftExpression . PFL_SHL AddExpression
   83                | ShiftExpression . PFL_SHR AddExpression

    PFL_SHL  shift, and go to state 59
    PFL_SHR  shift, and go to state 60

    $default  reduce using rule 75 (BitwiseExpression)


State 25

   81 ShiftExpression: AddExpression .
   85 AddExpression: AddExpression . PFL_ADDADD MulExpression
   86              | AddExpression . PFL_SUB MulExpression

    PFL_ADDADD  shift, and go to state 61
    PFL_SUB     shift, and go to state 62

    $default  reduce using rule 81 (ShiftExpression)


State 26

   84 AddExpression: MulExpression .
   88 MulExpression: MulExpression . PFL_MULMUL MulExpression

    PFL_MULMUL  shift, and go to state 63

    $default  reduce using rule 84 (AddExpression)


State 27

   87 MulExpression: Term .

    $default  reduce using rule 87 (MulExpression)


State 28

   89 Term: GenericNumber .

    $default  reduce using rule 89 (Term)


State 29

   94 Term: PFL_PROTOCOL '[' . GenericNumber ']'
   95     | PFL_PROTOCOL '[' . GenericNumber ':' GenericNumber ']'

    PFL_NUMBER     shift, and go to state 1
    PFL_HEXNUMBER  shift, and go to state 2

    GenericNumber  go to state 64


State 30

   94 Term: PFL_PROTOCOL . '[' GenericNumber ']'
   95     | PFL_PROTOCOL . '[' GenericNumber ':' GenericNumber ']'

    '['  shift, and go to state 29


State 31

   92 Term: PFL_PROTOFIELD .

    $default  reduce using rule 92 (Term)


State 32

   93 Term: PFL_PROTOFIELD_INDEX .

    $default  reduce using rule 93 (Term)


State 33

   79 BitwiseExpression: PFL_BWNOT ShiftExpression .
   82 ShiftExpression: ShiftExpression . PFL_SHL AddExpression
   83                | ShiftExpression . PFL_SHR AddExpression

    PFL_SHL  shift, and go to state 59
    PFL_SHR  shift, and go to state 60

    $default  reduce using rule 79 (BitwiseExpression)


State 34

   19 UnaryExpression: PFL_NOT UnaryExpression .

    $default  reduce using rule 19 (UnaryExpression)


State 35

   17 UnaryExpression: '(' BoolExpression . ')'

    ')'  shift, and go to state 65


State 36

   65 RelExpression: BitwiseExpression . PFL_EQ BitwiseExpression
   66              | BitwiseExpression . PFL_NE BitwiseExpression
   67              | BitwiseExpression . PFL_GT BitwiseExpression
   68              | BitwiseExpression . PFL_GE BitwiseExpression
   69              | BitwiseExpression . PFL_LT BitwiseExpression
   70              | BitwiseExpression . PFL_LE BitwiseExpression
   76 BitwiseExpression: BitwiseExpression . PFL_BWAND ShiftExpression
   77                  | BitwiseExpression . PFL_BWOR ShiftExpression
   78                  | BitwiseExpression . PFL_BWXOR ShiftExpression
   80                  | '(' BitwiseExpression . ')'

    PFL_BWAND  shift, and go to state 50
    PFL_BWOR   shift, and go to state 51
    PFL_BWXOR  shift, and go to state 52
    PFL_EQ     shift, and go to state 53
    PFL_NE     shift, and go to state 54
    PFL_LT     shift, and go to state 55
    PFL_LE     shift, and go to state 56
    PFL_GT     shift, and go to state 57
    PFL_GE     shift, and go to state 58
    ')'        shift, and go to state 66


State 37

    0 $accept: Statement $end .

    $default  accept


State 38

   16 ReturnPkt: PFL_RETURN_PACKET . PFL_ON PFL_PORT GenericNumber

    PFL_ON  shift, and go to state 67


State 39

    8 ExtractFields: PFL_EXTRACT_FIELDS . '(' FieldsList ')'

    '('  shift, and go to state 68


State 40

    2 Statement: FullEncap Action .

    $default  reduce using rule 2 (Statement)


State 41

    7 Action: ExtractFields .

    $default  reduce using rule 7 (Action)


State 42

    6 Action: ReturnPkt .

    $default  reduce using rule 6 (Action)


State 43

    1 Statement: BoolExpression FullEncap .
    3          | BoolExpression FullEncap . Action

    PFL_RETURN_PACKET   shift, and go to state 38
    PFL_EXTRACT_FIELDS  shift, and go to state 39

    $default  reduce using rule 1 (Statement)

    Action         go to state 69
    ExtractFields  go to state 41
    ReturnPkt      go to state 42


State 44

   52 OrExpression: OrExpression PFL_OR . AndExpression

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 3
    PFL_PROTOFIELD        shift, and go to state 4
    PFL_PROTOCOL_INDEX    shift, and go to state 5
    PFL_PROTOFIELD_INDEX  shift, and go to state 6
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8
    PFL_BWNOT             shift, and go to state 9
    PFL_NOT               shift, and go to state 10
    '('                   shift, and go to state 12

    UnaryExpression              go to state 15
    AndExpression                go to state 70
    BoolOperand                  go to state 19
    RelExpression                go to state 20
    ProtoFieldOrProtofieldIndex  go to state 21
    Protocol                     go to state 22
    BitwiseExpression            go to state 23
    ShiftExpression              go to state 24
    AddExpression                go to state 25
    MulExpression                go to state 26
    Term                         go to state 27
    GenericNumber                go to state 28


State 45

   54 AndExpression: AndExpression PFL_AND . AndExpression

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 3
    PFL_PROTOFIELD        shift, and go to state 4
    PFL_PROTOCOL_INDEX    shift, and go to state 5
    PFL_PROTOFIELD_INDEX  shift, and go to state 6
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8
    PFL_BWNOT             shift, and go to state 9
    PFL_NOT               shift, and go to state 10
    '('                   shift, and go to state 12

    UnaryExpression              go to state 15
    AndExpression                go to state 71
    BoolOperand                  go to state 19
    RelExpression                go to state 20
    ProtoFieldOrProtofieldIndex  go to state 21
    Protocol                     go to state 22
    BitwiseExpression            go to state 23
    ShiftExpression              go to state 24
    AddExpression                go to state 25
    MulExpression                go to state 26
    Term                         go to state 27
    GenericNumber                go to state 28


State 46

   23 Tunnel: PFL_TUNNELED .

    $default  reduce using rule 23 (Tunnel)


State 47

   18 UnaryExpression: BoolOperand Tunnel . FlagNosession FlagNoack
   20                | BoolOperand Tunnel . FlagNosession FlagNoack PFL_IN InExpression
   21                | BoolOperand Tunnel . FlagNosession FlagNoack PFL_NOTIN NotInExpression

    PFL_NOSESSION  shift, and go to state 72

    $default  reduce using rule 57 (FlagNosession)

    FlagNosession  go to state 73


State 48

   63 RelExpression: ProtoFieldOrProtofieldIndex PFL_MATCHES . PFL_STRING sensitive

    PFL_STRING  shift, and go to state 74


State 49

   64 RelExpression: ProtoFieldOrProtofieldIndex PFL_CONTAINS . PFL_STRING sensitive

    PFL_STRING  shift, and go to state 75


State 50

   76 BitwiseExpression: BitwiseExpression PFL_BWAND . ShiftExpression

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 30
    PFL_PROTOFIELD        shift, and go to state 31
    PFL_PROTOFIELD_INDEX  shift, and go to state 32
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8

    ShiftExpression  go to state 76
    AddExpression    go to state 25
    MulExpression    go to state 26
    Term             go to state 27
    GenericNumber    go to state 28


State 51

   77 BitwiseExpression: BitwiseExpression PFL_BWOR . ShiftExpression

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 30
    PFL_PROTOFIELD        shift, and go to state 31
    PFL_PROTOFIELD_INDEX  shift, and go to state 32
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8

    ShiftExpression  go to state 77
    AddExpression    go to state 25
    MulExpression    go to state 26
    Term             go to state 27
    GenericNumber    go to state 28


State 52

   78 BitwiseExpression: BitwiseExpression PFL_BWXOR . ShiftExpression

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 30
    PFL_PROTOFIELD        shift, and go to state 31
    PFL_PROTOFIELD_INDEX  shift, and go to state 32
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8

    ShiftExpression  go to state 78
    AddExpression    go to state 25
    MulExpression    go to state 26
    Term             go to state 27
    GenericNumber    go to state 28


State 53

   65 RelExpression: BitwiseExpression PFL_EQ . BitwiseExpression

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 30
    PFL_PROTOFIELD        shift, and go to state 31
    PFL_PROTOFIELD_INDEX  shift, and go to state 32
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8
    PFL_BWNOT             shift, and go to state 9
    '('                   shift, and go to state 79

    BitwiseExpression  go to state 80
    ShiftExpression    go to state 24
    AddExpression      go to state 25
    MulExpression      go to state 26
    Term               go to state 27
    GenericNumber      go to state 28


State 54

   66 RelExpression: BitwiseExpression PFL_NE . BitwiseExpression

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 30
    PFL_PROTOFIELD        shift, and go to state 31
    PFL_PROTOFIELD_INDEX  shift, and go to state 32
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8
    PFL_BWNOT             shift, and go to state 9
    '('                   shift, and go to state 79

    BitwiseExpression  go to state 81
    ShiftExpression    go to state 24
    AddExpression      go to state 25
    MulExpression      go to state 26
    Term               go to state 27
    GenericNumber      go to state 28


State 55

   69 RelExpression: BitwiseExpression PFL_LT . BitwiseExpression

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 30
    PFL_PROTOFIELD        shift, and go to state 31
    PFL_PROTOFIELD_INDEX  shift, and go to state 32
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8
    PFL_BWNOT             shift, and go to state 9
    '('                   shift, and go to state 79

    BitwiseExpression  go to state 82
    ShiftExpression    go to state 24
    AddExpression      go to state 25
    MulExpression      go to state 26
    Term               go to state 27
    GenericNumber      go to state 28


State 56

   70 RelExpression: BitwiseExpression PFL_LE . BitwiseExpression

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 30
    PFL_PROTOFIELD        shift, and go to state 31
    PFL_PROTOFIELD_INDEX  shift, and go to state 32
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8
    PFL_BWNOT             shift, and go to state 9
    '('                   shift, and go to state 79

    BitwiseExpression  go to state 83
    ShiftExpression    go to state 24
    AddExpression      go to state 25
    MulExpression      go to state 26
    Term               go to state 27
    GenericNumber      go to state 28


State 57

   67 RelExpression: BitwiseExpression PFL_GT . BitwiseExpression

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 30
    PFL_PROTOFIELD        shift, and go to state 31
    PFL_PROTOFIELD_INDEX  shift, and go to state 32
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8
    PFL_BWNOT             shift, and go to state 9
    '('                   shift, and go to state 79

    BitwiseExpression  go to state 84
    ShiftExpression    go to state 24
    AddExpression      go to state 25
    MulExpression      go to state 26
    Term               go to state 27
    GenericNumber      go to state 28


State 58

   68 RelExpression: BitwiseExpression PFL_GE . BitwiseExpression

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 30
    PFL_PROTOFIELD        shift, and go to state 31
    PFL_PROTOFIELD_INDEX  shift, and go to state 32
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8
    PFL_BWNOT             shift, and go to state 9
    '('                   shift, and go to state 79

    BitwiseExpression  go to state 85
    ShiftExpression    go to state 24
    AddExpression      go to state 25
    MulExpression      go to state 26
    Term               go to state 27
    GenericNumber      go to state 28


State 59

   82 ShiftExpression: ShiftExpression PFL_SHL . AddExpression

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 30
    PFL_PROTOFIELD        shift, and go to state 31
    PFL_PROTOFIELD_INDEX  shift, and go to state 32
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8

    AddExpression  go to state 86
    MulExpression  go to state 26
    Term           go to state 27
    GenericNumber  go to state 28


State 60

   83 ShiftExpression: ShiftExpression PFL_SHR . AddExpression

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 30
    PFL_PROTOFIELD        shift, and go to state 31
    PFL_PROTOFIELD_INDEX  shift, and go to state 32
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8

    AddExpression  go to state 87
    MulExpression  go to state 26
    Term           go to state 27
    GenericNumber  go to state 28


State 61

   85 AddExpression: AddExpression PFL_ADDADD . MulExpression

    PFL_NUMBER            shift, and go to state 1
    PFL_HEXNUMBER         shift, and go to state 2
    PFL_PROTOCOL          shift, and go to state 30
    PFL_PROTOFIELD        shift, and go to state 31
    PFL_PROTOFIELD_INDEX  shift, and go to state 32
    PFL_IPV4ADDR          shift, and go to state 7
    PFL_MACADDR           shift, and go to state 8
